# lights-out-game

./: README.md  pyproject.toml  setup.cfg  tasks.py
lights_out_game/: base_mainloop.py  cell.py  color.py  light.py  main.py  mainloop.py
test/: pytest.ini
